# Identicon_Tool

./: .gitignore  Cargo.toml  README.md
identicon_image_service/: Cargo.toml
identicon_image_service/src/: lib.rs
identicon_image_service/src/identicon/: algorithm.rs  background_colors_data.rs  color.rs  colorful_algorithm.rs  colors_data.rs  default_algorithm.rs  sixty_four_per_quadrant.rs  utils.rs
src/: lib.rs
src/identicon/: algorithm.rs  background_colors.json  color.rs  color_chaos_algorithm.rs  colorful_algorithm.rs  colors.json  default_algorithm.rs  image.rs  mod.rs  sixty_four_per_quadrant.rs  utils.rs
