[package]
name = "identicon_tool"
version = "0.1.0"
edition = "2021"

[lib]
name = "identicon_image_service"
path = "src/lib.rs"

[[bin]]
name = "identicon_tool"
path = "src/bin/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.4"
sha2 = "0.10.6"
serde = "1.0.147"
serde_derive = "1.0.147"
serde_json = "1.0.88"
hex_color = "2"
